# mymlnotes-supplementary-materials

./: .gitattributes  LICENSE  README.md  pyproject.toml
mongodb-article-notebooks/: data_schema_val.ipynb
python-visualizations/data/: Diamonds Prices2022.csv
python-visualizations/data/coffee/: disappearance.csv  domestic-consumption.csv  exports-calendar-year.csv  exports-crop-year.csv  gross-opening-stocks.csv  imports.csv  indicator-prices.csv  inventories.csv  prices-paid-to-growers.csv  re-exports.csv  retail-prices.csv  total-production.csv
python-visualizations/notebooks/: 2-Basic_Chart_Types_Slides.ipynb  2-matplotlib_charts_demos.ipynb  4-advanced_customization_demos.ipynb  4-advanced_customization_slide_code.ipynb  6-seaborn_demos.ipynb  6-seaborn_slides.ipynb
