[tool.poetry]
name = "code-notebooks-for-this-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dash = "^2.18.1"
solara = "^1.40.0"
panel = "^1.5.2"
watchfiles = "^0.24.0"
reflex = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
